--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">家庭电话簿</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_person_info">PersonInfoActivity</string>
+    <string name="title_activity_edit">EditActivity</string>
 </resources>
